--- a/holiday project/ansibleNginx.yml
+++ b/holiday project/ansibleNginx.yml
@@ -16,7 +16,7 @@
 
   - name: install php to run our code
     apt:
-      name: php8.1-fpm
+      name: php-fpm
       state: latest
 
   - name: remove the nginx file
@@ -29,7 +29,7 @@
       path: /etc/nginx/sites-available/default
       state: absent
 
-  - name: copy the nginx default file to server
+  - name: copy the nginx default configuration file to server
     copy:
       src: default
       dest: /etc/nginx/sites-available
@@ -37,7 +37,7 @@
       group: root
       mode: 0744
 
-  - name: copy the php file to print hostname to server
+  - name: To copy the php web page file to server.
     copy:
       src: index.php
       dest: /var/www/html
